--- a/client/graded-unit/package.json
+++ b/client/graded-unit/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-image-gallery": "^1.2.11",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "rrule": "^2.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
